devopssong/example/authorization-policy/nginx-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    version: v2
  name: nginx-v2
spec:
  containers:
  - image: nginx
    name: nginx
