devopssong/example/authorization-policy/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    version: v1
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
