devopssong/example/authorization-policy/nginx-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    version: v2
  name: istio-nginx-svc-v2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    version: v2
