devopssong/example/authorization-policy/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    version: v1
  name: istio-nginx-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    version: v1
